--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,17 @@ button:focus-visible {
   border-radius: 5px;
   padding: 10px;
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 10px;
+}
